Fixed z-index of header that was to high.

--- a/sites/all/themes/elearning/css/global.css.less
+++ b/sites/all/themes/elearning/css/global.css.less
@@ -59,7 +59,7 @@ h2 {
 
 .section-header {
   position: relative;
-  z-index: 100;
+  z-index: 10;
   .gradient-main-panel();
   border-top: #9e2600 @border-1;
   border-bottom: #9e2600 @border-1;
